@@ -1,8 +1,9 @@
 X3 C++ PluginFramework
 
-2011-01-17, Zhang Yun Gui <rhcad@hotmail.com>
+2011-01-18, Zhang Yun Gui <rhcad@hotmail.com>
 
-    * pkg_Core\Modules\ConfigXml\ConfigXmlImpl.h: Free XML objects need checking zero or not.
+    * pkg_Core\Modules\ConfigXml\ConfigXmlImpl.h:
+    * pkg_Core\Modules\ConfigXml\Cx_ConfigXml.cpp: Delay call CoUninitialize until plugin is unloading.
     
 2011-01-15, Zhang Yun Gui <rhcad@hotmail.com>
 
